--- a/GolfManager/GolfManager.vbproj
+++ b/GolfManager/GolfManager.vbproj
@@ -165,7 +165,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Facebook_icon.png" />
+    <None Include="image\instagram.png" />
+    <None Include="image\facebook-logo-black-and-white-png.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
