--- a/GolfManager/GolfManager.vbproj
+++ b/GolfManager/GolfManager.vbproj
@@ -87,6 +87,7 @@
     <Compile Include="Form2ndMonitor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Module1_GlobalVariables.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
