--- a/GolfManager/GolfManager.vbproj
+++ b/GolfManager/GolfManager.vbproj
@@ -74,6 +74,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsRoomReservation.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
