--- a/GolfManager/GolfManager.vbproj
+++ b/GolfManager/GolfManager.vbproj
@@ -47,6 +47,10 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -88,7 +92,9 @@
     <Compile Include="Form2ndMonitor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="clsRoomReservationJSON.vb" />
     <Compile Include="Module1_GlobalVariables.vb" />
+    <Compile Include="Module2_JSONPostGetResponse.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -170,6 +176,7 @@
   <ItemGroup>
     <None Include="image\instagram.png" />
     <None Include="image\facebook.png" />
+    <None Include="packages.config" />
     <None Include="Resources\settings.png" />
     <None Include="Resources\logo_01.png" />
     <None Include="Resources\instagram.png" />
