2nd타석모니터 텍스트탑배너, 하단이미지배너(준비중)

--- a/GolfManager/GolfManager.vbproj
+++ b/GolfManager/GolfManager.vbproj
@@ -110,6 +110,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Settings.vb" />
     <Compile Include="UserControl_customer_main.Designer.vb">
       <DependentUpon>UserControl_customer_main.vb</DependentUpon>
     </Compile>
