Top banner font color적용

--- a/GolfManager/App.config
+++ b/GolfManager/App.config
@@ -22,6 +22,9 @@
             <setting name="BottomImgPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Text2ndScreenTopBannerFontColor" serializeAs="String">
+                <value>White</value>
+            </setting>
         </GolfManager.My.MySettings>
     </userSettings>
 </configuration>
