--- a/GolfManager/My Project/Settings.settings
+++ b/GolfManager/My Project/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="BottomImgPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Text2ndScreenTopBannerFontColor" Type="System.String" Scope="User">
+      <Value Profile="(Default)">White</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
