Change Font (Gulim)

--- a/GolfManager/GolfManager.vbproj
+++ b/GolfManager/GolfManager.vbproj
@@ -183,7 +183,9 @@
     <None Include="Resources\instagram.png" />
     <None Include="Resources\Exit.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="image\logo_golficon.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
