'임의배치' 세팅창값적용.

--- a/GolfManager/App.config
+++ b/GolfManager/App.config
@@ -25,6 +25,9 @@
             <setting name="Text2ndScreenTopBannerFontColor" serializeAs="String">
                 <value>White</value>
             </setting>
+            <setting name="Text2ndScreenTopicFontColor" serializeAs="String">
+                <value>White</value>
+            </setting>
         </GolfManager.My.MySettings>
     </userSettings>
 </configuration>
