락스크린 세팅화면

--- a/GolfManager/My Project/Settings.settings
+++ b/GolfManager/My Project/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="Text2ndScreenTopicFontColor" Type="System.String" Scope="User">
       <Value Profile="(Default)">White</Value>
     </Setting>
+    <Setting Name="IsRoomComputer" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="MyRoomNumber" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
