--- a/GolfManager/App.config
+++ b/GolfManager/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="GolfManager.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="ShopManager.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,32 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
+        <GolfManager.My.MySettings>
+            <setting name="Text2ndScreenTopBanner" serializeAs="String">
+                <value>**  타석 사용현황 **</value>
+            </setting>
+            <setting name="Text2ndScreenTopBannerFontSize" serializeAs="String">
+                <value>18</value>
+            </setting>
+            <setting name="BackgroundimgPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="BottomImgPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Text2ndScreenTopBannerFontColor" serializeAs="String">
+                <value>White</value>
+            </setting>
+            <setting name="Text2ndScreenTopicFontColor" serializeAs="String">
+                <value>White</value>
+            </setting>
+            <setting name="IsRoomComputer" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="MyRoomNumber" serializeAs="String">
+                <value>1</value>
+            </setting>
+        </GolfManager.My.MySettings>
         <ShopManager.My.MySettings>
             <setting name="Text2ndScreenTopBanner" serializeAs="String">
                 <value>**  타석 사용현황 **</value>
