--- a/GolfManager/ShopManager.vbproj
+++ b/GolfManager/ShopManager.vbproj
@@ -87,6 +87,16 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormLogin.Designer.vb" />
+    <Compile Include="FormLogin.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LockScreenIntro.Designer.vb">
+      <DependentUpon>LockScreenIntro.vb</DependentUpon>
+    </Compile>
+    <Compile Include="LockScreenIntro.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form2ndMonitor.Designer.vb">
       <DependentUpon>Form2ndMonitor.vb</DependentUpon>
     </Compile>
@@ -94,12 +104,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="clsRoomReservationJSON.vb" />
-    <Compile Include="FormLogin.Designer.vb">
-      <DependentUpon>FormLogin.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormLogin.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Module1_GlobalVariables.vb" />
     <Compile Include="Module2_JSONPostGetResponse.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -150,8 +154,9 @@
     <EmbeddedResource Include="Form2ndMonitor.resx">
       <DependentUpon>Form2ndMonitor.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormLogin.resx">
-      <DependentUpon>FormLogin.vb</DependentUpon>
+    <EmbeddedResource Include="FormLogin.resx" />
+    <EmbeddedResource Include="LockScreenIntro.resx">
+      <DependentUpon>LockScreenIntro.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
