타석용 락스크린 구현

--- a/GolfManager/App.config
+++ b/GolfManager/App.config
@@ -35,6 +35,9 @@
             <setting name="MyRoomNumber" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="TextRoomComputerLockComment" serializeAs="String">
+                <value>이용해 주셔서 감사합니다.</value>
+            </setting>
         </GolfManager.My.MySettings>
         <ShopManager.My.MySettings>
             <setting name="Text2ndScreenTopBanner" serializeAs="String">
