--- a/GolfManager/ShopManager.vbproj
+++ b/GolfManager/ShopManager.vbproj
@@ -87,6 +87,12 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form3Lockscreen.Designer.vb">
+      <DependentUpon>Form3Lockscreen.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form3Lockscreen.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormLogin.Designer.vb" />
     <Compile Include="FormLogin.vb">
       <SubType>Form</SubType>
@@ -150,6 +156,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form3Lockscreen.resx">
+      <DependentUpon>Form3Lockscreen.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2ndMonitor.resx">
       <DependentUpon>Form2ndMonitor.vb</DependentUpon>
